# wisp

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  ca  wisp.code-workspace
.ai/: context.md
.ai/rules/: agent-prompts.mdc  architecture.mdc  keep-docs-updated.mdc  project-overview.mdc  rust-conventions.mdc  skills-format.mdc
.antigravity/: context.md  conventions.md
.cursor/rules/: agent-prompts.mdc  architecture.mdc  keep-docs-updated.mdc  project-overview.mdc  rust-conventions.mdc  templates.mdc
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh  post-create.sh  post-start.sh
.devcontainer/agent/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  publish-vscode.yml  release.yml
agents/: _base-system.md
agents/accessibility/: prompt.md
agents/architect/: prompt.md
agents/context-generator/: prompt.md
config/: settings.json
docs/: README.md  adding-agents.md  configuration.md  mcp-integrations.md  pipeline-overview.md  prerequisites.md  project-structure.md  ralph-loop.md  vscode-extension.md  vscode-install.md  vscode-publish.md
pipeline/: generate-context.sh  generate-prd.sh  monitor.sh  orchestrator.sh  run-agent.sh  run-pipeline.sh
schemas/: manifest.schema.json
scripts/: install.sh  update-homebrew-formula.sh
src/: cli.rs  config.rs  main.rs  utils.rs
src/git/: pr.rs  (+1 more)
templates/: brief.md  context-skill.md  manifest.json  prd.md
vscode-extension/: .eslintrc.json  .gitignore  .vscodeignore  CHANGELOG.md  README.md  esbuild.js  jest.config.js  package-lock.json  package.json  tsconfig.json
(+122 files in other folders)
